--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,7 @@ install:
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --quiet pacman"
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --quiet --sysupgrade --sysupgrade"
   - bash -xlc "pacman --noconfirm -S --quiet --needed base-devel zip unzip"
-  - bash -xlc "pacman --noconfirm --quiet -U http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz"
-  - bash -xlc "pacman --noconfirm --quiet -U http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz"
+  - bash -xlc "pacman --noconfirm -S --quiet --needed -U http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz -U http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz"
   # download prebuilt flexdll
   - appveyor DownloadFile https://github.com/alainfrisch/flexdll/releases/download/0.37/flexdll-bin-0.37.zip
   - 7z.exe e flexdll-bin-0.37.zip -o"C:\projects\bucklescript\vendor\flexdll" -y
