--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,18 @@
 environment:
   MSYS2_ARCH: i686
   MSYSTEM: MINGW32
-  
+
 platform: x64
 
 install:
   - PATH C:\msys64\mingw32\bin;C:\msys64\usr\bin;%PATH%
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --quiet pacman"
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --quiet --sysupgrade --sysupgrade"
-  - bash -xlc "pacman --noconfirm -S --quiet --needed base-devel mingw-w64-i686-gcc mingw-w64-i686-gcc-libs zip unzip"
+  - bash -xlc "pacman --noconfirm -S --quiet --needed base-devel zip unzip"
+  - appveyor DownloadFile http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz
+  - appveyor DownloadFile http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz
+  - bash -lc "pacman -U mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz"
+  - bash -lc "pacman -U mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz"
   # download prebuilt flexdll
   - appveyor DownloadFile https://github.com/alainfrisch/flexdll/releases/download/0.37/flexdll-bin-0.37.zip
   - 7z.exe e flexdll-bin-0.37.zip -o"C:\projects\bucklescript\vendor\flexdll" -y
@@ -16,7 +20,7 @@ install:
   - git clone https://github.com/bsansouci/flexdll C:\projects\bucklescript\vendor\flexdll-build
   # download forked cppo src
   - git clone --single-branch -b windows https://github.com/bsansouci/cppo C:\projects\bucklescript\cppo
-  
+
 build_script:
   # set up windows build Makefiles + values
   - copy vendor\ocaml\config\m-nt.h vendor\ocaml\byterun\caml\m.h
