--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,8 @@ install:
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --quiet pacman"
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --quiet --sysupgrade --sysupgrade"
   - bash -xlc "pacman --noconfirm -S --quiet --needed base-devel zip unzip"
-  - appveyor DownloadFile http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz
-  - appveyor DownloadFile http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz
+  - bash -lc "curl -L http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz > mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz"
+  - bash -lc "curl -L http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz > mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz"
   - bash -lc "pacman -U mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz"
   - bash -lc "pacman -U mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz"
   # download prebuilt flexdll
