--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ install:
   - bash -lc "curl -L http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz > mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz"
   - bash -lc "pacman --noconfirm --needed -U mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz"
   - bash -lc "pacman --noconfirm --needed -U mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz"
-  - bash -lc "pacman --noconfirm -Syu"
+  - bash -lc "pacman --noconfirm --refresh --needed -Syu"
   # download prebuilt flexdll
   - appveyor DownloadFile https://github.com/alainfrisch/flexdll/releases/download/0.37/flexdll-bin-0.37.zip
   - 7z.exe e flexdll-bin-0.37.zip -o"C:\projects\bucklescript\vendor\flexdll" -y
@@ -37,18 +37,18 @@ build_script:
   - xcopy /sq C:\msys64\MINGW32\i686-w64-mingw32\lib vendor\lib
   - mkdir vendor\lib\gcc
   - xcopy /sq C:\msys64\MINGW32\lib\gcc vendor\lib\gcc
-  - copy C:\msys64\MINGW32\bin\libwinpthread-1.dll vendor\lib\gcc\i686-w64-mingw32\7.4.0
-  - copy C:\msys64\MINGW32\bin\libgcc_s_dw2-1.dll vendor\lib\gcc\i686-w64-mingw32\7.4.0
-  - copy C:\msys64\MINGW32\bin\zlib1.dll vendor\lib\gcc\i686-w64-mingw32\7.4.0
+  - copy C:\msys64\MINGW32\bin\libwinpthread-1.dll vendor\lib\gcc\i686-w64-mingw32\7.3.0
+  - copy C:\msys64\MINGW32\bin\libgcc_s_dw2-1.dll vendor\lib\gcc\i686-w64-mingw32\7.3.0
+  - copy C:\msys64\MINGW32\bin\zlib1.dll vendor\lib\gcc\i686-w64-mingw32\7.3.0
   - mkdir vendor\include
   - xcopy /sq C:\msys64\MINGW32\i686-w64-mingw32\include vendor\include
   # Delete some unnecessary stuff
-  - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.4.0/adainclude"
-  - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.4.0/adalib"
-  - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.4.0/cc1objplus.exe"
-  # - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.4.0/cc1plus.exe"
-  - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.4.0/f951.exe"
-  - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.4.0/cc1obj.exe"
+  - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.3.0/adainclude"
+  - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.3.0/adalib"
+  - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.3.0/cc1objplus.exe"
+  # - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.3.0/cc1plus.exe"
+  - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.3.0/f951.exe"
+  - bash -lc "rm -rf /c/projects/bucklescript/vendor/lib/gcc/i686-w64-mingw32/7.3.0/cc1obj.exe"
   - bash -lc "rm -rf /c/projects/bucklescript/vendor/mingw32/gdb.exe"
   - bash -lc "rm -rf /c/projects/bucklescript/vendor/mingw32/gnat*"
   - bash -lc "find /c/projects/bucklescript/vendor -type f -name '*fortran*' -delete"
@@ -61,19 +61,19 @@ build_script:
   - bash -lc "find /c/projects/bucklescript/vendor -name '*xz*' -delete"
   - bash -lc "find /c/projects/bucklescript/vendor -name '*lzma*' -delete"
   # Build ocaml using prebuild flexdll
-  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.4.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt world.opt"
-  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.4.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt otherlibrariesopt"
-  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.4.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt install"
+  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.3.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt world.opt"
+  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.3.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt otherlibrariesopt"
+  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.3.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt install"
   # Build forked src of flexdll
-  - bash -lc "INCLUDE_FLAGS='-ccopt -L/c/msys64/MINGW32/i686-w64-mingw32/lib -ccopt -L/c/msys64/MINGW32/lib -ccopt -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.4.0' PATH=/c/projects/bucklescript/vendor/ocaml:/c/projects/bucklescript/vendor/ocaml/bin:/c/projects/bucklescript/vendor/flexdll:$PATH ocamlopt.opt -v"
-  - bash -lc "INCLUDE_FLAGS='-ccopt -L/c/msys64/MINGW32/i686-w64-mingw32/lib -ccopt -L/c/msys64/MINGW32/lib -ccopt -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.4.0' PATH=/c/projects/bucklescript/vendor/ocaml:/c/projects/bucklescript/vendor/ocaml/bin:/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/flexdll-build"
+  - bash -lc "INCLUDE_FLAGS='-ccopt -L/c/msys64/MINGW32/i686-w64-mingw32/lib -ccopt -L/c/msys64/MINGW32/lib -ccopt -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.3.0' PATH=/c/projects/bucklescript/vendor/ocaml:/c/projects/bucklescript/vendor/ocaml/bin:/c/projects/bucklescript/vendor/flexdll:$PATH ocamlopt.opt -v"
+  - bash -lc "INCLUDE_FLAGS='-ccopt -L/c/msys64/MINGW32/i686-w64-mingw32/lib -ccopt -L/c/msys64/MINGW32/lib -ccopt -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.3.0' PATH=/c/projects/bucklescript/vendor/ocaml:/c/projects/bucklescript/vendor/ocaml/bin:/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/flexdll-build"
   # Move newly-built flexdll into position
   - bash -lc "rm -rf /c/projects/bucklescript/vendor/flexdll; mv /c/projects/bucklescript/vendor/flexdll-build /c/projects/bucklescript/vendor/flexdll"
   # Rebuild ocaml using our flexdll
-  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.4.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt clean"
-  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.4.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt world.opt"
-  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.4.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt otherlibrariesopt"
-  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.4.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt install"
+  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.3.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt clean"
+  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.3.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt world.opt"
+  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.3.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt otherlibrariesopt"
+  - bash -lc "FLEXLINKFLAGS='-L/c/msys64/MINGW32/i686-w64-mingw32/lib -L/c/msys64/MINGW32/lib -L/c/msys64/MINGW32/lib/gcc/i686-w64-mingw32/7.3.0' PATH=/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/vendor/ocaml -f Makefile.nt install"
   # Build cppo fork
   - bash -lc "PATH=/c/projects/bucklescript/vendor/ocaml:/c/projects/bucklescript/vendor/ocaml/bin:/c/projects/bucklescript/vendor/flexdll:$PATH make -C /c/projects/bucklescript/cppo"
   # Build bucklescript
