--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ install:
   - PATH C:\msys64\mingw32\bin;C:\msys64\usr\bin;%PATH%
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --quiet pacman"
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --quiet --sysupgrade --sysupgrade"
-  - bash -xlc "pacman --noconfirm -S --quiet --needed base-devel zip unzip"
+  - bash -xlc "pacman --noconfirm -S --quiet --needed zip unzip"
   - bash -lc "curl -L http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz > mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz"
   - bash -lc "curl -L http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz > mingw-w64-i686-gcc-libs-7.3.0-2-any.pkg.tar.xz"
   - bash -lc "pacman --noconfirm --needed -U mingw-w64-i686-gcc-7.3.0-2-any.pkg.tar.xz"
